--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,6 +67,9 @@
     <Compile Include="Assets\Project\Scripts\Presenter\fightPresenter.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Project\Scripts\Presenter\deckBuildPresenter.cs" />
+    <Compile Include="Assets\Project\Scripts\Presenter\MainPresenter.cs" />
+    <Compile Include="Assets\Project\Scripts\Model\GameModel.cs" />
+    <Compile Include="Assets\Project\Scripts\View\characterSelectionView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Photon\PhotonLibs\netstandard2.0\Photon3Unity3D.xml" />
