--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,15 +61,17 @@
     <Compile Include="Assets\Project\Scripts\Helpers\cardClass.cs" />
     <Compile Include="Assets\Project\Scripts\Model\fighterModel.cs" />
     <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
+    <Compile Include="Assets\Project\Scripts\Model\GameModel.cs" />
     <Compile Include="Assets\Project\Scripts\View\deckView.cs" />
     <Compile Include="Assets\Photon\PhotonLibs\WebSocket\WebSocket.cs" />
     <Compile Include="Assets\Project\Scripts\View\fightView.cs" />
     <Compile Include="Assets\Project\Scripts\Presenter\fightPresenter.cs" />
-    <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
-    <Compile Include="Assets\Project\Scripts\Presenter\deckBuildPresenter.cs" />
     <Compile Include="Assets\Project\Scripts\Presenter\MainPresenter.cs" />
-    <Compile Include="Assets\Project\Scripts\Model\GameModel.cs" />
+    <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Project\Scripts\View\characterSelectionView.cs" />
+    <Compile Include="Assets\Project\Scripts\Presenter\deckBuildPresenter.cs" />
+    <Compile Include="Assets\Project\Scripts\Helpers\fighterClass.cs" />
+    <Compile Include="Assets\Project\Scripts\Helpers\wearablesClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Photon\PhotonLibs\netstandard2.0\Photon3Unity3D.xml" />
